[tool.poetry]
name = "llm-graph-ai"
version = "0.1.0"
description = "LLM / Graph AI / Knowledge Graph Experiments for Natural Language is all a Graph Needs"
authors = ["Russell Jurney <rjurney@graphlet.ai>"]
license = "MIT"
readme = "README.md"
packages = [{include = "llm_graph_ai"}]

[tool.poetry.dependencies]
python = "^3.10"
openai = "^0.28.0"
chromadb = "^0.4.13"
langchain = "^0.0.301"
pypdf = "^3.16.2"


[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
flake8 = "^6.1.0"
isort = "^5.12.0"
mypy = "^1.5.1"
pre-commit = "^3.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py310"]
include = ["llm_graph_ai", "test"]

[tool.isort]
profile = "black"
src_paths = ["llm_graph_ai", "test"]

[tool.mypy]
python_version = "3.10"
mypy_path = ["llm_graph_ai", "test"]
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
